# nid

./: Cargo.toml  LICENSE-MIT  README.md  README.tpl  clippy.toml  mise.toml  renovate.json  rustfmt.toml
.github/: renovate.json5
.github/workflows/: ci.yaml  release.yaml
docs/: release_procedure.md
src/: alphabet.rs  lib.rs  packed.rs
