[package]
name = "nid"
version = "3.0.0-rc.1"
edition = "2021"
rust-version = "1.61"
description = "Generate and parse Nano IDs"
repository = "https://github.com/ciffelia/nid"
license = "MIT OR Apache-2.0"
keywords = ["nanoid", "unique", "nano", "id", "uuid"]
categories = ["data-structures", "parser-implementations"]
exclude = ["/.github", "/.gitignore"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_auto_cfg"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", optional = true }
rand = "0.8.5"
zeroize = { version = "1.7", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.4"
