[package]
name = "nid"
version = "3.0.0"
edition = "2021"
rust-version = "1.71"
description = "Generate and parse Nano IDs"
repository = "https://github.com/ciffelia/nid"
license = "MIT OR Apache-2.0"
keywords = ["nanoid", "unique", "nano", "id", "uuid"]
categories = ["data-structures", "parser-implementations"]
exclude = ["/.github", "/.gitignore"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", optional = true }
rand = "0.8.6"
zeroize = { version = "1.8.2", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.150"
pretty_assertions = "1.4.1"
