[package]
name = "nid"
version = "4.0.0"
edition = "2021"
rust-version = "1.85"
description = "Generate and parse Nano IDs"
repository = "https://github.com/ciffelia/nid"
license = "MIT OR Apache-2.0"
keywords = ["nanoid", "unique", "nano", "id", "uuid"]
categories = ["data-structures", "parser-implementations"]
exclude = ["/.github", "/.gitignore"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", optional = true }
rand = "0.10.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.150"
pretty_assertions = "1.4.1"
